HP-TechCon Android/assets/www/css/my.css
body{
	font-size: small;
}

textarea{
	resize: none;
}

/* Log in page */
#logIn label{
	font-size: small;
}
#logo{
	text-align: center;
}

/* Home page */
#featuresGrid{
	text-align: center;
}
#featuresGrid div{
	padding-top: 10px;
}
#featuresGrid a:link{ 
	color: #000000; 
	text-decoration: none;
}
#featuredGrid a:visited{ 
	color: #000000; 
	text-decoration: none;
}
.homeIcons{
	width: 80px;
	height: 80px;
}

#features-panel span{
	font-size: medium;
}

/* Navigation panel */
#nav-panel li{
	height: 70px;
}
#nav-panel img{
	width: 50px;
	height: 50px;
	padding-top: 5px;
	padding-left: 10px;
}

/* Change how it looks in all listviews */
.header{
	text-align: center;
	overflow: visble;
}
.listLook p{
	font-size: small;
	max-height: 50px; /* Temporary solution */
	width: 100%;
}
.listLook h2{
	font-size: small;
	width: 75%;
	height: 100%;
}
.listLook img{
	width: 50px;
	height: 50px;
	padding-top: 15px;
	padding-left: 10px;
}
ul em{
	position: absolute;
	bottom: 2px;
}
.listLook em{
	font-size: x-small;
}
.ui-listview .ui-li-desc{
	white-space: normal;
}
.listLook .attachment{
	width: 70%;
	height: 75px; /* Testing values */
	padding-bottom: 5px;
	padding-left: 10px;
}
/* Change padding between image and text in listviews */
.ui-li-has-thumb .ui-btn-inner a.ui-link-inherit,.ui-li-static.ui-li-has-thumb{padding-left:70px !important}

/* Exchange-main page */
#inputBar .ui-block-a{
	width: 80%;
}
#inputBar .ui-block-b{
	width: 20%;
	padding-top: 7px;
}

/* Exchange-details page */
.portrait{
	width: 75px;
	height: 75px;
}

table th{
	vertical-align: text-top;
	text-align: left;
}
table td{
	font-weight: normal;
	width: 100%;
	word-wrap: break-word;
}

.exchangeDetails .ui-block-a{
	width: 27%; /* PLEASE TEST ON PHONE */
}

#savedNote{
	height: 100px;
	font-size: small;
	font-weight: normal;
}
#inputNote{
	height: 100px;
	font-size: small;
	font-weight: normal;
}

/* Attachment option bar */
.options{
	padding-top: 7px;
	font-size: small;
}

/* Check in Page */
#eventBar .ui-block-a{
	width: 70%;
}
#eventBar .ui-block-b{
	padding-top: 7px;
	width: 30%;
}
#eventBar a{
	width: 92%;
}

/* Microblog Post */
#blogNote{
	font-weight: normal;
	height: 100px;
}
.listLook .smallItem1{
	height: 30px;
}
.listLook .smallItem1 div{
	position: relative;
	top: -2px;
}
.listLook .smallItem2{
	height: 40px;
}

/* Post details */
.attachView{
	width: 100%;
	text-align: center;
}
.postDetails .ui-block-a{
	width: 27%;
}
.postDetails .ui-block-b{
	width: 73%;
}
.postDetails p{
	width: 100%;
}
.postDetails h2{
	font-size: small;
}

/* Comment Feed */
#myComment{
	resize: none;
	font-size: small;
	font-weight: normal;
}
#commentButton{
	width: 25%;
	padding-left: 75%;
}

/* Pop up options */
#menuShare1 ul, a{
	font-size: small;
}
#menuShare2 ul, a{
	font-size: small;
}

/* Share Page */
.listLook label{
	font-size: small;
	font-weight: bold;
}
#messageTo{
	
}
#messageBody{
	height: 100px;
}

/* People Page */
.personDetails .ui-block-a{
	width: 27%;
}

/* Icons */
.ui-icon-camera{
	background-image: url("../images/camera.png");
}

.ui-icon-microphone{
	background-image: url("../images/microphone.png");
}

.ui-icon-share{
	background-image: url("../images/share.png");
}

.ui-page {
    -webkit-backface-visibility: hidden;
}

